update release notes

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -22,8 +22,19 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  This update includes a wide range of enhancements to LND:
+  This release updates LND from v0.15.5-beta to v0.16.2-beta, and also includes bug fixes for the Lightning Node application.
 
+
+  Lightning Node application:
+
+  - keysend payments are now displayed in the Lightning Wallet transactions list
+
+  - multiple externalip entries are allowed in lnd.conf
+
+  - handle breaking change in lnd.conf apriori parameters introduced in LND v0.16.0-beta
+
+
+  LND:
 
   - Refined peer-to-peer behavior and BOLT spec compliance.
 
@@ -33,11 +44,12 @@ releaseNotes: >-
 
   - Streamlined watchtower session handling and address updates.
 
+  - Enhanced mempool scanning logic that no longer blocks startup
+
   - And more! 
   
   
-  For more detailed information on these enhancements and additional updates, 
-  please refer to the full release notes available at https://github.com/lightningnetwork/lnd/blob/master/docs/release-notes/release-notes-0.16.2.md
+  For more detailed information on these LND updates, please refer to the full release notes available at https://github.com/lightningnetwork/lnd/releases
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
