--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -44,7 +44,7 @@ releaseNotes: >-
 
   - Streamlined watchtower session handling and address updates.
 
-  - Enhanced mempool scanning logic that no longer blocks startup
+  - Enhanced mempool scanning logic that no longer blocks startup.
 
   - And more! 
   
