Update LND to v0.16.2-beta (#493)
Co-authored-by: nmfretz <nmfretz@gmail.com>

--- a/lightning/umbrel-app.yml
+++ b/lightning/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: lightning
 category: Finance
 name: Lightning Node
-version: "0.15.5-beta-2"
+version: "v0.16.2-beta"
 tagline: Run your personal Lightning Network node
 description: >-
   Run your personal Lightning Network node, and join the future of Bitcoin today.
@@ -22,20 +22,34 @@ description: >-
 
   An official app from Umbrel.
 releaseNotes: >-
-  Introducing Advanced Settings. Take control of your node and customize it to your needs.
+  This release updates LND from v0.15.5-beta to v0.16.2-beta, and also includes bug fixes for the Lightning Node application.
 
 
-  - Personalize your node by giving it a name and color.
+  Lightning Node application:
 
-  - Enable larger channels, and limit channel sizes.
+  - keysend payments are now displayed in the Lightning Wallet transactions list
 
-  - Set your routing fees, and optimize your routing strategy.
+  - multiple externalip entries are allowed in lnd.conf
 
-  - Add watchtower services to guard your channels, and run a service for others.
+  - handle breaking change in lnd.conf apriori parameters introduced in LND v0.16.0-beta
 
-  - Fine-tune the performance and resource usage of your node.
 
-  - And much more!
+  LND:
+
+  - Refined peer-to-peer behavior and BOLT spec compliance.
+
+  - Extended RPC functionality and wallet capabilities.
+
+  - Improved lncli features and pathfinding improvements.
+
+  - Streamlined watchtower session handling and address updates.
+
+  - Enhanced mempool scanning logic that no longer blocks startup.
+
+  - And more! 
+  
+  
+  For more detailed information on these LND updates, please refer to the full release notes available at https://github.com/lightningnetwork/lnd/releases
 developer: Umbrel
 website: https://umbrel.com
 dependencies:
