Update lightning-terminal to v0.9.2-alpha (#477)

--- a/lightning-terminal/umbrel-app.yml
+++ b/lightning-terminal/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lightning-terminal
 category: Lightning Node Management
 name: Lightning Terminal
-version: "0.8.6-alpha"
+version: "0.9.2-alpha"
 tagline: The easiest way to manage channel liquidity
 description: >-
   Lightning Terminal is the easiest way to manage inbound and
@@ -50,24 +50,15 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes: >-
-  This release of Lightning Terminal (LiT) includes a variety of updates
-  including support for off-chain accounts and the ability to customize the 
-  permissions of an LNC session through the UI. It also contains an 
-  implementation of a rule firewall and a privacy firewall. The rule 
-  firewall can be used to verify the parameters of certain calls (for example 
-  ensuring that calls only act on a specific set of channels) and the privacy 
-  firewall can be used to force private info (such as pub keys, channel IDs etc) 
-  to be mapped out to random values for responses and mapped back to real values
-  for requests. An Autopilot client is added which handles registration of LNC 
-  sessions with the Autopilot server. Autopilot calls will be forced to go 
-  through the new rule and privacy firewalls.
+  This release of Lightning Terminal (LiT) includes an LND version bump 
+  that addresses a few performance issues.
+  
 
-
-  We'll be continuously working to improve the user experience based on feedback
-  from the community.
-
-
-  This release packages LND v0.15.5-beta, Loop v0.21.0-beta, Pool v0.6.1-beta, 
-  and Faraday v0.2.9-alpha.
+  We'll be continuously working to improve the user experience based on 
+  feedback from the community.
+  
+  
+  This release packages LND v0.16.2-beta, Loop v0.23.0-beta, Pool v0.6.2-beta, 
+  and Faraday v0.2.11-alpha.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/348
