small changes to release notes

--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -39,45 +39,43 @@ gallery:
 path: ""
 defaultPassword: ""
 releaseNotes: >
-  From 1.19.6 to 1.21.2:
+  Updates Uptime Kuma from version 1.19.6 to 1.21.2.
   
 
   🆕 New Features:
   
-    - Now you can schedule maintenance with a cron expression + duration
+  - Now you can schedule maintenance with a cron expression + duration
    
    
-   💇‍♀️ Improvements
-   
-    - [Maintenance] The core of maintenance feature is completely rewritten and is changed to cron based, the performance is much better
+  💇‍♀️ Improvements
+
+  - [Maintenance] The core of maintenance feature is completely rewritten and is changed to cron based, the performance is much better
     
-    - [Maintenance] Effective Date Range is no longer required, it is now optional
+  - [Maintenance] Effective Date Range is no longer required, it is now optional
     
-    - [Maintenance] Ability to set a timezone per maintenance
+  - [Maintenance] Ability to set a timezone per maintenance
     
-    - [Maintenance] Ability to follow the timezone with DST
+  - [Maintenance] Ability to follow the timezone with DST
 
   
   🐛 Bug Fixes:
   
-    - #3003 Maintenance is completely bugged in 1.21.1 and 1.21.0
+  - #3003 Maintenance is completely bugged in 1.21.1 and 1.21.0
   
-    - #2988 Fix Ignore TLS/SSL Error is not working when using a proxy (Thanks @chakflying)
+  - #2988 Fix Ignore TLS/SSL Error is not working when using a proxy (Thanks @chakflying)
   
  
-  ⚠️ Attention
+  ⚠️ IMPORTANT - After upgrading, you should review the following maintenance items:
   
-  After upgraded to this version. You should review your maintenance:
+  - All old maintenance schedules will be set to UTC individually, if you need other timezones, please change it individually.
   
-    - All old maintenance schedules will be set to UTC individually, if you need other timezones, please change it individually.
+  - Since previous versions' maintenance is always respected to UTC, which means the maintenance time could be shifted due to DST in your country. 
   
-    - Since previous versions' maintenance is always respected to UTC, which means the maintenance time could be shifted due to DST in your country. 
-  
-    - Breaking change: Due to the limitation of cron, the options Last 2nd day of month, 
-    Last 3rd day of month and Last 4th day of month in the strategy Day of Month is no longer available. 
-    (Last day of month is still available)
+  - Breaking change: Due to the limitation of cron, the options Last 2nd day of month, 
+  Last 3rd day of month and Last 4th day of month in the strategy Day of Month is no longer available. 
+  (Last day of month is still available)
 
   
-  Full changelog from 1.19.6 to 1.21.2 can be found here: https://github.com/louislam/uptime-kuma/releases
+  Full changelog for versions 1.19.6 to 1.21.2 can be found here: https://github.com/louislam/uptime-kuma/releases
 submitter: Philipp Haussleiter
 submission: https://github.com/getumbrel/umbrel/pull/1148
