small changes to release notes

--- a/uptime-kuma/umbrel-app.yml
+++ b/uptime-kuma/umbrel-app.yml
@@ -47,15 +47,15 @@ releaseNotes: >
   - Now you can schedule maintenance with a cron expression + duration
    
    
-  💇‍♀️ Improvements
+  💇‍♀️ Improvements to Maintenance:
 
-  - [Maintenance] The core of maintenance feature is completely rewritten and is changed to cron based, the performance is much better
-    
-  - [Maintenance] Effective Date Range is no longer required, it is now optional
-    
-  - [Maintenance] Ability to set a timezone per maintenance
-    
-  - [Maintenance] Ability to follow the timezone with DST
+  - The core of maintenance feature is completely rewritten and is changed to cron based, the performance is much better
+
+  - Effective Date Range is no longer required, it is now optional
+
+  - Ability to set a timezone per maintenance
+
+  - Ability to follow the timezone with DST
 
   
   🐛 Bug Fixes:
