--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: firefly-iii
 category: Finance
 name: Firefly III
-version: "5.7.18"
+version: "6.0.9"
 tagline: Your personal finance manager
 description: >-
   Firefly III is a manager for your personal finances. It is self-hosted and open source. This means that it's free, it has no ads and no tracking.
@@ -44,5 +44,27 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
+releaseNotes: >
+- Added
+
+Better length validation for text fields.
+
+- Changed
+
+Better calculation of available budget
+
+- Fixed
+
+Issue 7377 Tag search was broken
+
+Issue 7389 Bug in charts
+
+Issue 7394 unique iban check was broken
+
+Issue 7427 API would not accept page 18 and up.
+
+Issue 7410 Various dark mode color fixes
+
+Old documentation links fixed by @mindlessroman and @noxonad!
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/378
