--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.7.12"
+version: "1.9.2"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,40 +34,28 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  Updates BTCPay Server from version 1.7.5 to 1.7.12.
+  Updates BTCPay Server from version 1.7.12 to 1.9.2.
   A full list of new features, improvements, and bug fixes
-  for versions between 1.7.5 and 1.7.12 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
+  for versions between 1.7.12 and 1.9.2 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
   
-  
-  Version 1.7.12 release notes:
-  
-  Update recommended for shared instances.
-
   
   Bug fixes
 
-  - Fix second order XSS: Harden file type input (#4635) @NicolasDorier
-
-  - UI: The standalone confirmation modal design was broken @dennisreimann
-
-  - Fix: Setting the password of a new created user via API shouldn't be required (#4534, #4647) @NicolasDorier
-
-  - Fix: If user get locked out, unlocking or deleting user fails (#4641, #4644) @NicolasDorier
-
-  - Fix: Migrating from SQLite was crashing in some conditions (#4623) @NicolasDorier
-
-  - Fix: Unable to Edit amount when cloning paid Payment Request (#4639) @NicolasDorier
-
-  - Webhook: Add missing model validation (#4636) @dennisreimann
-
-  - Checkout v2: Fix automatic redirect after paid (#4633) @dennisreimann
-
+  - Shop's new receipt and cart not displaying items correctly and missing additional information (#4890. @Kukks
   
-  Improvement
-
-  - Preferred paging count is saved into user preferences cookie (#4637) @dennisreimann
-
-  - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
+  - Email sent to PoS URL via POST not being inserted into email/custom form (#4810). @Kukks
+  
+  - Regression causing payment request form data to not be saved in invoices (#4895) @NicolasDorier @Kukks
+  
+  - After opening payouts page of a pull payment, then clicking on the store's Payouts menu would still show only the same pull payment's payout (#4788) @Kukks
+  
+  - Optimized print view in receipt (#4916 #4902) @dennisreimann
+  
+  - NFC and PoS print view not working without checking "Allow LNUrl for standard invoice". This superfluous option has been removed. (#4911) @NicolasDorier
+  
+  - Automated payouts could hang the restart of the server. @NicolasDorier
+  
+  - Missing validation on payout processor configuration @NicolasDorier
 
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
