--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -34,28 +34,11 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  Updates BTCPay Server from version 1.7.12 to 1.9.2.
+  This update from version 1.7.12 to 1.9.2 includes a range of new features, including customizable checkout forms and invoice metadata, store branding options,
+  a redesigned Point of Sale keypad view, improved Point of Sale receipt, and more!
+
+
   A full list of new features, improvements, and bug fixes
   for versions between 1.7.12 and 1.9.2 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
-  
-  
-  Bug fixes
-
-  - Shop's new receipt and cart not displaying items correctly and missing additional information (#4890. @Kukks
-  
-  - Email sent to PoS URL via POST not being inserted into email/custom form (#4810). @Kukks
-  
-  - Regression causing payment request form data to not be saved in invoices (#4895) @NicolasDorier @Kukks
-  
-  - After opening payouts page of a pull payment, then clicking on the store's Payouts menu would still show only the same pull payment's payout (#4788) @Kukks
-  
-  - Optimized print view in receipt (#4916 #4902) @dennisreimann
-  
-  - NFC and PoS print view not working without checking "Allow LNUrl for standard invoice". This superfluous option has been removed. (#4911) @NicolasDorier
-  
-  - Automated payouts could hang the restart of the server. @NicolasDorier
-  
-  - Missing validation on payout processor configuration @NicolasDorier
-
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
