--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: Finance
 name: BTCPay Server
-version: "1.7.12"
+version: "1.9.2"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,40 +34,11 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  Updates BTCPay Server from version 1.7.5 to 1.7.12.
+  This update from version 1.7.12 to 1.9.2 includes a range of new features, including customizable checkout forms and invoice metadata, store branding options,
+  a redesigned Point of Sale keypad view, improved Point of Sale receipt, and more!
+
+
   A full list of new features, improvements, and bug fixes
-  for versions between 1.7.5 and 1.7.12 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
-  
-  
-  Version 1.7.12 release notes:
-  
-  Update recommended for shared instances.
-
-  
-  Bug fixes
-
-  - Fix second order XSS: Harden file type input (#4635) @NicolasDorier
-
-  - UI: The standalone confirmation modal design was broken @dennisreimann
-
-  - Fix: Setting the password of a new created user via API shouldn't be required (#4534, #4647) @NicolasDorier
-
-  - Fix: If user get locked out, unlocking or deleting user fails (#4641, #4644) @NicolasDorier
-
-  - Fix: Migrating from SQLite was crashing in some conditions (#4623) @NicolasDorier
-
-  - Fix: Unable to Edit amount when cloning paid Payment Request (#4639) @NicolasDorier
-
-  - Webhook: Add missing model validation (#4636) @dennisreimann
-
-  - Checkout v2: Fix automatic redirect after paid (#4633) @dennisreimann
-
-  
-  Improvement
-
-  - Preferred paging count is saved into user preferences cookie (#4637) @dennisreimann
-
-  - Fix typo in error message when vault is opening a wallet from the wrong chain (#4640) @eltociear
-
+  for versions between 1.7.12 and 1.9.2 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
