update release notes

--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -44,27 +44,12 @@ gallery:
 path: ""
 deterministicPassword: false
 torOnly: false
-releaseNotes: >
-- Added
+releaseNotes: >-
+  ⚠️ IMPORTANT: The Firefly III team recommends that you make a backup of your database before updating. 
+  This upgrade from version 5.7.18 to 6.0.9 may not be backwards compatible for users who manage outgoing loans.
+  See here for more details before updating: https://gist.github.com/JC5/909385c5086f9e07ba2c32e047446d68
 
-Better length validation for text fields.
 
-- Changed
-
-Better calculation of available budget
-
-- Fixed
-
-Issue 7377 Tag search was broken
-
-Issue 7389 Bug in charts
-
-Issue 7394 unique iban check was broken
-
-Issue 7427 API would not accept page 18 and up.
-
-Issue 7410 Various dark mode color fixes
-
-Old documentation links fixed by @mindlessroman and @noxonad!
+  Full release notes can be found here: https://github.com/firefly-iii/firefly-iii/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/378
