rearrange release notes

--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -45,8 +45,8 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >-
-  ⚠️ IMPORTANT: The Firefly III team recommends that you make a backup of your database before updating. 
-  This upgrade from version 5.7.18 to 6.0.9 may not be backwards compatible for users who manage outgoing loans.
+  ⚠️ This upgrade from version 5.7.18 to 6.0.9 may not be backwards compatible for users who manage outgoing loans.
+  The Firefly III team recommends that you make a backup of your database before updating. 
   See here for more details before updating: https://gist.github.com/JC5/909385c5086f9e07ba2c32e047446d68
 
 
