--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v2.2"
+version: "v2.3"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,11 +35,9 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  -   Includes click, a thin client for interacting with khan/conn (control plane). See this excellent writeup by the feature’s author, ~finmep-lanteb, for more details on the rationale.
-  
-  -   Adds a CLI option to configure the time between snapshots.
-  
-  -   Changes the placement of auto-docking in the boot sequence.
-  
-  
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.2
+  This release declares compatibility with the upcoming kelvin 413
+  release. It features the addition of JSON jetting, eyre caches and
+  runtime support for remote scry.
+
+
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.3
