--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
   
   web:
-    image: lnbitsdocker/lnbits-legend:0.9.7@sha256:1fccd9611a23b9d9259ca4adff860e3e2d441ed42261d192141e76b261cd3b74
+    image: lnbitsdocker/lnbits-legend:0.10.5@sha256:602dd4a490605ffeb33a1223cb824b605c062112867085c0146b9847d935b662
     init: true
     restart: on-failure
     stop_grace_period: 1m
@@ -32,3 +32,5 @@ services:
       LNBITS_DEFAULT_WALLET_NAME: "LNbits wallet"
       LNBITS_DISABLED_EXTENSIONS: "amilk"
       LNBITS_ADMIN_EXTENSIONS: "ngrok"
+      LNBITS_ADMIN_USERS: ""
+      LNBITS_ADMIN_UI: "true"
