--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: Finance
 name: LNbits
-version: "0.9.7"
+version: "0.10.5"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -28,8 +28,8 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes:  >-
-  - This minor release updates the Docker images and fixes the dependency versions from 0.9.6.1.
+  - TODO: update release notes.
   
-  See the full changelog here: https://github.com/lnbits/lnbits/releases/tag/0.9.7
+  Full details on release notes can be found here: https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
