--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: specter-desktop
 category: Finance
 name: Specter Desktop
-version: "1.14.2"
+version: "2.0.1"
 tagline: Multisig with hardware wallets made easy
 description: >-
   Specter Desktop connects to the Bitcoin Core running on your Umbrel
@@ -44,38 +44,32 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - UIUX: Address labeling revamp #1978 (OTK & Manolis Mandrapilias)
-
-  - UIUX: Better node selection #1987 (Manolis Mandrapilias)
-
-  - UIUX: Update Passport connection instructions #2010 (BitcoinQnA)
-
-  - Bugfix: Long loading time of wallets at start-up with Spectrum #2015 (k9ert)
-
-  - Bugfix: Merkle proofs with Spectrum #2012 (k9ert)
-
-  - Bugfix: Addressinfo edge case fixed #2001 (relativisticelectron)
-
-  - Bugfix: Version not properly detected #2020 (k9ert)
-
-  - Chore: Generic error handling for API calls #2014 (k9ert)
-
-  - Chore: Moving the Spectrum extension to a core extension #2011 (k9ert)
-
-  - Chore: Bump qs from 6.5.2 to 6.5.3 in /pyinstaller/electron #2002 (dependabot[bot])
-
-  - Chore: Bump Spectrum and Python version #2027 (Manolis Mandrapilias)
-
-  - Chore: Cypress test for address labeling #2021 (Manolis Mandrapilias)
-
-  - Chore: Fix nix shell by generating hashes with pip-compile #2016 (hodlwave)
-
-  - Docs: Corrected build instructions #1996 (relativisticelectron)
+  - Bugfix: Keyerror in case of frozen utxos #2308 (k9ert)
+  
+  - Bugfix: method getaddressinfo not implemented #2313 (k9ert)
+  
+  - Bugfix: replace deprecated new-window with setWindowOpenHandler #2293 (Manolis Mandrapilias)
+  
+  - Bugfix/UIUX: Fix Tor configuration issues and improve UX of built-in Tor #2304 (Manolis Mandrapilias)
+  
+  - Chore: comments for macos build script #2228 (Manolis Mandrapilias)
+  
+  - Chore: Random improvements #2292 (k9ert)
+  
+  - Chore: Updating dependencies #2298 (k9ert)
+  
+  - Docs: update faq #2287 (k9ert)
+  
+  - Docs: Update Screenshots on Readme file #2286 (Moritz)
+  
+  - Feature: Enable Taproot support for Trezor #2295 (Manolis Mandrapilias)
+  
+  - Swan plugin: New design, improved UX and bug fixes #2309 (Manolis Mandrapilias)
   
   
-  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v1.14.2
+  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v2.0.1
   
   
-  Compare to previous version: https://github.com/cryptoadvance/specter-desktop/compare/v1.14.1...v1.14.2
+  Compare to previous version: https://github.com/cryptoadvance/specter-desktop/compare/v1.14.2...v2.0.1
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
