--- a/joplin-server/umbrel-app.yml
+++ b/joplin-server/umbrel-app.yml
@@ -10,6 +10,7 @@ releaseNotes: >-
   Clean up share logic (107f2e1)
 developer: Laurent Cozic
 website: https://joplinapp.org
+dependencies: []
 repo: https://github.com/laurent22/joplin
 support:https: //github.com/laurent22/joplin/blob/dev/readme/donate.md
 port: 3778
