--- a/joplin-server/docker-compose.yml
+++ b/joplin-server/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - "22300"
     environment:
       - APP_PORT=22300
+      - APP_BASE_URL=
       - DB_CLIENT=pg
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
