--- a/joplin-server/docker-compose.yml
+++ b/joplin-server/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     image: joplin/server:2.10.10-beta
     restart: on-failure
     stop_grace_period: 1m
-    expose:
-      - "22300"
+    ports:
+      - "22300:22300"
     environment:
       - APP_PORT=22300
       - APP_BASE_URL=
