--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: immich
 category: Files
 name: Immich
-version: "v1.40.1_63-dev"
+version: "v1.54.1"
 tagline: High performance photo and video backup solution
 description: >-
   An open source and high performance self-hosted backup solution for the videos and photos on your mobile device
@@ -41,7 +41,9 @@ description: >-
   - LivePhoto backup and playback
   
   - User-defined storage structure
-releaseNotes: ""
+releaseNotes: >
+  A full list of new features, improvements, and bug fixes
+  for versions between 1.40.1_63-dev and 1.54.1 can be found here: https://github.com/immich-app/immich/compare/v1.40.1_63-dev...v1.54.1
 developer: Alex Tran
 website: https://www.immich.app
 dependencies: []
