add SUPER_USER and hex

--- a/lnbits/docker-compose.yml
+++ b/lnbits/docker-compose.yml
@@ -33,3 +33,4 @@ services:
       LNBITS_DISABLED_EXTENSIONS: "amilk"
       LNBITS_ADMIN_EXTENSIONS: "ngrok"
       LNBITS_ADMIN_UI: "true"
+      SUPER_USER: "$APP_PASSWORD"
