--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -26,7 +26,7 @@ gallery:
   - 3.jpg
 path: ""
 defaultUsername: ""
-defaultPassword: ""
+deterministicPassword: true
 releaseNotes:  >-
   - TODO: update release notes.
   
