--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -13,6 +13,12 @@ description: >-
 
 
   LNbits is packaged with tools to help manage funds, such as a table of transactions, line chart of spending, export to CSV, and more to come. It provides an extendable platform for expanding Lightning Network functionality via LNbits extension framework, and can also be used as a fallback wallet for the LNURL scheme.
+
+
+  Extensions can be installed by visiting the super admin page of your LNbits app. To do this, open your LNbits app
+  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
+  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
+  any user.
 developer: LNbits
 website: https://github.com/lnbits/lnbits-legend
 dependencies:
@@ -28,7 +34,15 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  - TODO: update release notes.
+  ⚠️ This update fixes a critical vulnerability in LNbits. Please update as soon as possible.
+
+
+  New versions of LNbits now have all extensions removed by default. To install extensions, you need
+  to visit your super admin page and install them from there. To do this, open your LNbits app
+  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
+  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
+  any user.
+
   
   Full details on release notes can be found here: https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
