--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -36,7 +36,9 @@ deterministicPassword: true
 releaseNotes:  >-
   ⚠️ This update fixes a critical vulnerability in LNbits. Please update as soon as possible.
 
-
+  
+  IMPORTANT NOTE ON EXTENSIONS:
+  
   New versions of LNbits now have all extensions removed by default. To install extensions, you need
   to visit your super admin page and install them from there. To do this, open your LNbits app
   and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
