--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -15,6 +15,7 @@ description: >-
   LNbits is packaged with tools to help manage funds, such as a table of transactions, line chart of spending, export to CSV, and more to come. It provides an extendable platform for expanding Lightning Network functionality via LNbits extension framework, and can also be used as a fallback wallet for the LNURL scheme.
 
 
+  HOW TO INSTALL EXTENSIONS:
   Extensions can be installed by visiting the super admin page of your LNbits app. To do this, open your LNbits app
   and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
   This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
@@ -38,7 +39,7 @@ releaseNotes:  >-
 
   
   IMPORTANT NOTE ON EXTENSIONS:
-  
+
   New versions of LNbits now have all extensions removed by default. To install extensions, you need
   to visit your super admin page and install them from there. To do this, open your LNbits app
   and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
