add hard refresh warning

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 
 
   HOW TO INSTALL EXTENSIONS:
-  
+
   Extensions can be installed by visiting the super admin page of your LNbits app. To do this, open your LNbits app
   and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
   This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
@@ -45,7 +45,8 @@ releaseNotes:  >-
   to visit your super admin page and install them from there. To do this, open your LNbits app
   and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
   This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
-  any user.
+  any user. Existing LNbits users that are updating their app in Umbrel may need to hard refresh their browser on the extensions page
+  in order to manage installed extensions.
 
   
   Full details on release notes can be found here: https://github.com/lnbits/lnbits/releases
