--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: lnbits
 category: Finance
 name: LNbits
-version: "0.9.7"
+version: "0.10.6"
 tagline: Multi-user wallet management system
 description: >-
   LNbits is a simple multi-user and account system for Lightning
@@ -13,6 +13,14 @@ description: >-
 
 
   LNbits is packaged with tools to help manage funds, such as a table of transactions, line chart of spending, export to CSV, and more to come. It provides an extendable platform for expanding Lightning Network functionality via LNbits extension framework, and can also be used as a fallback wallet for the LNURL scheme.
+
+
+  HOW TO INSTALL EXTENSIONS:
+
+  Extensions can be installed by visiting the super admin page of your LNbits app. To do this, open your LNbits app
+  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
+  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
+  any user.
 developer: LNbits
 website: https://github.com/lnbits/lnbits-legend
 dependencies:
@@ -26,10 +34,21 @@ gallery:
   - 3.jpg
 path: ""
 defaultUsername: ""
-defaultPassword: ""
+deterministicPassword: true
 releaseNotes:  >-
-  - This minor release updates the Docker images and fixes the dependency versions from 0.9.6.1.
+  ⚠️ This update fixes a critical vulnerability in LNbits. Please update as soon as possible.
+
   
-  See the full changelog here: https://github.com/lnbits/lnbits/releases/tag/0.9.7
+  IMPORTANT NOTE ON EXTENSIONS:
+
+  New versions of LNbits now have all extensions removed by default. To install extensions, you need
+  to visit your super admin page and install them from there. To do this, open your LNbits app
+  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
+  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
+  any user. Existing LNbits users that are updating their app in Umbrel may need to hard refresh their browser on the extensions page
+  in order to manage installed extensions.
+
+  
+  Full details on release notes can be found here: https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
