update lnbits description and release notes

--- a/lnbits/umbrel-app.yml
+++ b/lnbits/umbrel-app.yml
@@ -15,12 +15,17 @@ description: >-
   LNbits is packaged with tools to help manage funds, such as a table of transactions, line chart of spending, export to CSV, and more to come. It provides an extendable platform for expanding Lightning Network functionality via LNbits extension framework, and can also be used as a fallback wallet for the LNURL scheme.
 
 
-  HOW TO INSTALL EXTENSIONS:
+  🔧 Extension Management
 
-  Extensions can be installed by visiting the super admin page of your LNbits app. To do this, open your LNbits app
-  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
-  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
-  any user.
+
+  Follow these steps to install extensions:
+
+
+  1. Copy your unique LNbits password from the LNbits' app store page on your Umbrel: 'umbrel.local/app-store/lnbits'.
+  
+  2. Access the Super Admin page of LNbits at 'umbrel.local:3007/uuidv4/<your-lnbits-password>'. Replace '<your-lnbits-password>' with the password you copied before.
+  
+  3. You can now install and uninstall extensions from this page.
 developer: LNbits
 website: https://github.com/lnbits/lnbits-legend
 dependencies:
@@ -36,19 +41,46 @@ path: ""
 defaultUsername: ""
 deterministicPassword: true
 releaseNotes:  >-
-  ⚠️ This update fixes a critical vulnerability in LNbits. Please update as soon as possible.
+  🚨 Critical Security Update: This update addresses a critical security vulnerability in LNbits. Please update as soon as possible.
+
+
+  🔧 Extension Management Changes:
+  
+  
+  New and existing users should follow these steps to install extensions:
+
+
+  1. Copy your unique LNbits password from the LNbits' app store page on your Umbrel: 'umbrel.local/app-store/lnbits'.
+  
+  2. Access the Super Admin page of LNbits at 'umbrel.local:3007/uuidv4/<your-lnbits-password>'. Replace '<your-lnbits-password>' with the password you copied before.
+  
+  3. You can now install and uninstall extensions from this page.
+
+
+  🔄 Extension Restoration for Existing Users:
+
+
+  - If an extension was previously installed, it won't show up after the update.
+
+  - Reinstall the extension from the Super Admin page to restore its enabled state and data.
+
+
+  🔓 Extension Enabling/Disabling:
+
+
+  - Once installed, any user can enable/disable extensions from their user page.
+  
+  - Existing LNbits users that are updating their app may need to hard refresh their browser on the extensions page in order to enable/disable extensions.
+
+
+  👥 Granting Admin Access:
+
+
+  - From the Super Admin page, you can make other users admins.
+
+  - Admins can install extensions without visiting the Super Admin page.
 
   
-  IMPORTANT NOTE ON EXTENSIONS:
-
-  New versions of LNbits now have all extensions removed by default. To install extensions, you need
-  to visit your super admin page and install them from there. To do this, open your LNbits app
-  and replace the umbrel.local:3007 URL with umbrel.local:3007/uuidv4/<your-unique-password-shown-in-the-lnbits-app-store-page>.
-  This will redirect you to the super admin page where you can install extensions. These extensions can then be enabled/disabled by
-  any user. Existing LNbits users that are updating their app in Umbrel may need to hard refresh their browser on the extensions page
-  in order to manage installed extensions.
-
-  
-  Full details on release notes can be found here: https://github.com/lnbits/lnbits/releases
+  📄 Full Release Notes and detailed information is available at: https://github.com/lnbits/lnbits/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/372
