update submitter field

--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -21,7 +21,7 @@ developer: TDEX Network developers
 website: https://dev.tdex.network
 repo: https://github.com/tdex-network/tdex-daemon
 support: https://t.me/tdexnetwork
-submitter: tiero
+submitter: TDEX Network developers (tiero)
 submission: https://github.com/getumbrel/umbrel-apps/pull/151
 port: 9094
 torOnly: false
