update version in manifest

--- a/tdex/umbrel-app.yml
+++ b/tdex/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: tdex
 category: Finance
 name: TDEX Provider
-version: "0.8.15"
+version: "0.9.1"
 tagline: Provide liquidity on the TDEX Network, an open protocol to trade Liquid Network assets.
 description: >-
   A liquidity provider holds Liquid reserves of both a BASE_ASSET-QUOTE_ASSET in his non-custodial Liquid hot-wallet,
@@ -17,7 +17,7 @@ description: >-
   constant product market-making. In short, this model generates a full order-book based on an initial price for the market.
   Every transaction that occurs on this market will adjust the prices of the market accordingly.
 dependencies: []
-developer: TDEX Network developers
+developer: TDEX Network
 website: https://dev.tdex.network
 repo: https://github.com/tdex-network/tdex-daemon
 support: https://t.me/tdexnetwork
