--- a/nolooking/umbrel-app.yml
+++ b/nolooking/umbrel-app.yml
@@ -2,21 +2,22 @@ manifestVersion: 1
 id: nolooking
 category: Lightning Node Management 
 name: nolooking
-version: "0.3.0-alpha"
+version: "0.4.0-alpha"
 tagline: Batch Channels using PayJoin
 description: >-
-  Nolooking leverages Pay-to-Endpoint (PayJoin) to negotiate a channel open for your lightning node, initiated by any BIP78 supporting wallet.
+  Nolooking supports sending and receiving BIP78 payjoin using your LND wallet.
 
-
-  You can open multiple lightning channels in a single payment, improving privacy, saving on transaction fees and wait time.
-
+  Payjoin improves privacy, consolodates to save transaction fees and saves time.
 
   Read the article about Lightning Powered PayJoin: https://chaincase.app/words/lightning-payjoin to hear all the benefits!
 
-
   Please note that nolooking is still in early development. By using nolooking, you hold all responsibility for any loss of funds or other grievances which may arise. We are rapidly iterating on this product, feedback and contributions are strongly appreciated.
+
+  See https://payjoin.org for more.
 releaseNotes: >-
   - Send PayJoin support
+  - Receive regular payjoin
+  - Use official PDK release from https://crates.io/crates/payjoin
 developer: nolooking
 website: https://nolooking.chaincase.app
 dependencies:
