tweak releaseNotes slightly

--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -34,8 +34,9 @@ defaultPassword: ""
 torOnly: false
 releaseNotes: >-
   This release updates Transmission from version 3.00 to 4.0.3
+  
 
-  Full release notes can be found at https://github.com/transmission/transmission/releases
+  Full release notes are available at https://github.com/transmission/transmission/releases
 permissions:
   - STORAGE_DOWNLOADS
 submitter: Umbrel
