--- a/qbittorrent/umbrel-app.yml
+++ b/qbittorrent/umbrel-app.yml
@@ -3,21 +3,24 @@ id: qbittorrent
 category: Networking
 name: qBittorrent
 version: "4.5.2"
-tagline: A fast, easy and free BitTorrent client
+tagline: Free and reliable P2P Bittorrent client
 description: >-
   The qBittorrent project aims to provide an open-source software alternative to µTorrent.
   
+
   Additionally, qBittorrent runs and provides the same features on all major platforms (FreeBSD, Linux, macOS, OS/2, Windows).
   
+
   Bittorrent is based on the Qt toolkit and libtorrent-rasterbar library.
   
+
   ⚠️ qBittorrent downloads torrents over the Clearnet, not Tor.
 developer: qBittorrent
 website: https://qbittorrent.org/
 dependencies: []
 repo: https://github.com/qBittorrent/qBittorrent
 support: https://github.com/qBittorrent/qBittorrent/issues
-port: 8080
+port: 8094
 gallery:
   - 1.jpg
   - 2.jpg
@@ -28,3 +31,5 @@ defaultPassword: "adminadmin"
 torOnly: false
 permissions:
   - STORAGE_DOWNLOADS
+submitter: ASOwnerYT
+submission: https://github.com/getumbrel/umbrel-apps/pull/468
