--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -2,14 +2,14 @@ manifestVersion: 1
 id: robosats
 category: Finance
 name: RoboSats
-version: "v0.4.0-alpha"
+version: "v0.5.0-alpha"
 tagline: Simple and Private Bitcoin P2P Exchange
 description: >-
   RoboSats is a simple and private app to exchange bitcoin for national currencies. 
   Robosats simplifies the P2P user experience and uses lightning hold invoices to 
   minimize custody and trust requirements. The deterministically generated robot 
   avatars help users stick to best privacy practices.
-  
+
 
   Features:
 
@@ -18,13 +18,13 @@ description: >-
 
   - More than 10 languages available and over 60 fiat currencies
 
-  - Safe: simply lock a lightning hodl invoice and show you are real and commited.
+  - Safe: simply lock a lightning hodl invoice and show you are real and committed.
 
   - No data collection. Your communication with your peer is PGP encrypted, only you can read it.
 
-  - Lightning fast: the average soverign trade finishes in ~ 8 minutes. Faster than a single block confirmation!
+  - Lightning fast: the average sovereign trade finishes in ~ 8 minutes. Faster than a single block confirmation!
 
-  - Fully collateralized escrow: your peer is always commited and cannot run away with the funds.
+  - Fully collateralized escrow: your peer is always committed and cannot run away with the funds.
 
   - Strong incentives system: attempts of cheating are penalized with the slashing of the Sats in the fidelity bond.
 
@@ -34,21 +34,19 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  - New Robot page
+  - New authentication method for robots (you must update!)
 
-  - New user onboarding dialog
+  - Added possibility to revert fiat sent
 
-  - New robot Recovery dialog.
+  - New payment methods
 
-  - New Robot Garage. The garage is a backlog of your multiple robots. It helps you switch easily between identities. Note that only the active robot will receive sound notifications for its order.
+  - New trade summary, and preliminary Sats amounts before making / taking an order.
+    
+  - New language: japanese
 
-  - A robot that has past trade now shows a warning "Reusing trading identity degrades your privacy against other users, coordinators and observers."
-
-  - Other minor bug bixes and updates.
-
+  - Many other minor bug bug fixes and updates.
   
-  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.3.3-alpha...v0.4.0-alpha
-
+  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.4.0-alpha...v0.5.0-alpha
 developer: RoboSats
 website: https://learn.robosats.com
 dependencies: []
