add typesense env var as false

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       DISABLE_REVERSE_GEOCODING: ${APP_IMMICH_DISABLE_REVERSE_GEOCODING}
       REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
+      TYPESENSE_ENABLED: "false"
     depends_on:
       - redis
       - postgres
