update machine-learning container with new entrypoint

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -58,7 +58,7 @@ services:
 
   machine-learning:
     image: altran1502/immich-machine-learning:v1.55.1@sha256:461e51ebeea082eb2c634cba0f5aa999fdabc50aa35513f3c802a7742ce1a5bb
-    entrypoint: ["/bin/sh", "./entrypoint.sh"]
+    entrypoint: ["/bin/sh", "./start-server.sh"]
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
     environment:
