--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: robosats
 category: Finance
 name: RoboSats
-version: "v0.4.0-alpha"
+version: "v0.5.0-alpha"
 tagline: Simple and Private Bitcoin P2P Exchange
 description: >-
   RoboSats is a simple and private app to exchange bitcoin for national currencies. 
@@ -34,20 +34,11 @@ description: >-
   You can join other cool Robots and get community support at https://t.me/robosats telegram group.
   
 releaseNotes: >-
-  - New Robot page
 
-  - New user onboarding dialog
-
-  - New robot Recovery dialog.
-
-  - New Robot Garage. The garage is a backlog of your multiple robots. It helps you switch easily between identities. Note that only the active robot will receive sound notifications for its order.
-
-  - A robot that has past trade now shows a warning "Reusing trading identity degrades your privacy against other users, coordinators and observers."
-
-  - Other minor bug bixes and updates.
+  For the complete v0.5.0 release notes please visit here: https://github.com/RoboSats/robosats/releases/tag/v0.5.0-alpha
 
   
-  Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.3.3-alpha...v0.4.0-alpha
+  Full changelog can be found here: https://github.com/RoboSats/robosats/compare/v0.4.3-alpha...v0.5.0-alpha
 
 developer: RoboSats
 website: https://learn.robosats.com
