add IMMICH_SERVER_URL env var to web container to access webUI with new changes

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -93,6 +93,7 @@ services:
       REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
       PUBLIC_IMMICH_SERVER_URL: "http://immich_server_1:3001"
+      IMMICH_SERVER_URL: "http://immich_server_1:3001"
     restart: on-failure
 
   typesense:
