--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -62,6 +62,7 @@ services:
     image: altran1502/immich-machine-learning:v1.55.1@sha256:461e51ebeea082eb2c634cba0f5aa999fdabc50aa35513f3c802a7742ce1a5bb
     volumes:
       - ${APP_DATA_DIR}/data/upload:/usr/src/app/upload
+      - ${APP_DATA_DIR}/data/model-cache:/cache
     environment:
       NODE_ENV: production
       DB_HOSTNAME: immich_postgres_1
