add machine learning url env var to proxy to get rid of internal server error when searching

--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -111,6 +111,7 @@ services:
     environment:
       IMMICH_WEB_URL: "http://immich_web_1:3000"
       IMMICH_SERVER_URL: "http://immich_server_1:3001"
+      IMMICH_MACHINE_LEARNING_URL: "http://immich_machine-learning_1:3003"
     depends_on:
       - server
     restart: on-failure
