--- a/immich/docker-compose.yml
+++ b/immich/docker-compose.yml
@@ -25,6 +25,7 @@ services:
       REVERSE_GEOCODING_PRECISION: ${APP_IMMICH_REVERSE_GEOCODING_PRECISION}
       PUBLIC_LOGIN_PAGE_MESSAGE: ${APP_IMMICH_PUBLIC_LOGIN_PAGE_MESSAGE}
       TYPESENSE_API_KEY: ${APP_IMMICH_TYPESENSE_API_KEY}
+      IMMICH_MACHINE_LEARNING_URL: "http://immich_machine-learning_1:3003"
     depends_on:
       - redis
       - postgres
