--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v2.3"
+version: "v2.5"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,9 +35,9 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  This release declares compatibility with the upcoming kelvin 413
-  release. It features the addition of JSON jetting, eyre caches and
-  runtime support for remote scry.
+  This vere release fixes a memory leak in the packet forwarding flow of
+  Ames. It also fixes a remote scry runtime cache bug and a remote scry
+  packet deserialization issue.
 
 
-  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.3
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v2.5
