--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: Finance
 name: Ghostfolio
-version: "1.241.0"
+version: "1.269.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,19 +31,15 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release updates Ghostfolio from 1.231.0 to 1.241.0.
+  This release updates Ghostfolio from 1.241.0 to 1.269.0.
   A full list of new features, improvements, and bug fixes
-  for versions between 1.231.0 and 1.241.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
+  for versions between 1.241.0 and 1.269.0 can be found here: https://github.com/ghostfolio/ghostfolio/releases.
     
-  Version 1.241.0 release notes:
+  Version 1.269.0 release notes:
 
-  - Filtered activities with type ITEM from search results
+  - Added FINANCIAL_MODELING_PREP as a new data source type
+  - Improved the market price on the first buy date in the chart of the position detail dialog
+  - Restructured the admin control panel with a new settings tab
 
-  - Considered the user's language in the Stripe checkout
-
-  - Upgraded the Stripe dependencies
-
-  - Upgraded twitter-api-v2 from version 1.10.3 to 1.14.2
-  
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
