Updated developer and repo link

--- a/core-lightning/umbrel-app.yml
+++ b/core-lightning/umbrel-app.yml
@@ -16,11 +16,11 @@ description: >-
 
   Core Lightning and Application powered by Blockstream.
 
-developer: Shahana Farooqui
+developer: Core Lightning
 website: https://blockstream.com/lightning/
 dependencies:
   - bitcoin
-repo: https://github.com/ElementsProject/umbrel-core-lightning
+repo: https://github.com/ElementsProject/cln-application
 support: https://community.corelightning.org/home
 port: 2103
 gallery:
