update release notes

--- a/specter-desktop/umbrel-app.yml
+++ b/specter-desktop/umbrel-app.yml
@@ -44,32 +44,18 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  - Bugfix: Keyerror in case of frozen utxos #2308 (k9ert)
+  This release updates Specter Desktop from version 1.14.2 to 2.0.1. It includes various bug fixes and performance improvements, as well as the following new features:
+
+
+  - Refined user interface respecting the design of the original layout.
   
-  - Bugfix: method getaddressinfo not implemented #2313 (k9ert)
+  - Ability to connect to the Bitcoin network via public Electrum servers (Spectrum Plugin).
   
-  - Bugfix: replace deprecated new-window with setWindowOpenHandler #2293 (Manolis Mandrapilias)
+  - Tor connectivity for all outgoing network traffic including Electrum traffic.
   
-  - Bugfix/UIUX: Fix Tor configuration issues and improve UX of built-in Tor #2304 (Manolis Mandrapilias)
-  
-  - Chore: comments for macos build script #2228 (Manolis Mandrapilias)
-  
-  - Chore: Random improvements #2292 (k9ert)
-  
-  - Chore: Updating dependencies #2298 (k9ert)
-  
-  - Docs: update faq #2287 (k9ert)
-  
-  - Docs: Update Screenshots on Readme file #2286 (Moritz)
-  
-  - Feature: Enable Taproot support for Trezor #2295 (Manolis Mandrapilias)
-  
-  - Swan plugin: New design, improved UX and bug fixes #2309 (Manolis Mandrapilias)
+  - Enable Taproot support for Trezor #2295 (Manolis Mandrapilias)
   
   
-  Full changelog can be found here: https://github.com/cryptoadvance/specter-desktop/releases/tag/v2.0.1
-  
-  
-  Compare to previous version: https://github.com/cryptoadvance/specter-desktop/compare/v1.14.2...v2.0.1
+  Full release notes and detailed information is available at https://github.com/cryptoadvance/specter-desktop/releases
 submitter: k9ert
 submission: https://github.com/getumbrel/umbrel/pull/339
