update release notes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "v1.40.0"
+version: "v1.40.1"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,26 +28,9 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
+  This release updates Tailscale from v1.34.2 to v1.40.1.
 
- - News: Early warning: as early as August 2023, Windows 7, 8, Server 2008 and Server 2012 will no longer be supported. Similarly, for macOS, macOS 10.13 High Sierra or 10.14 Mojave will no longer be supported and macOS 10.15 Catalina or later will be required.
 
- - All platforms: tailscale up --force-reauth will now display a warning and 5 second countdown if you are connected over SSH over Tailscale, unless --accept-risk=lose-ssh is also given.
-Tailscale now dynamically increases the buffer size for DERP relay messages based on the amount of available RAM (#7776).
-Improvements were made to how Tailscale advertises available endpoints to reduce the likelihood of a spurious loss of direct connections (#7877).
- 
- - Linux: Substantially higher throughput: Surpassing 10Gb/s over Tailscale
-Improved CPU consumption on systems with a very large (1M+) routing table
-
-- Windows: redo migration of pre-Fast-User-Switching state for better robustness
-
-- macOS change menu item to "Settings" instead of "Preferences" on macOS Ventura
-
-- Android: Added intents com.tailscale.ipn.VPN_CONNECT and com.tailscale.ipn.VPN_DISCONNECT
-
-- gokrazy: Tailscale SSH now works on gokrazy
-
-- QNAP: fix UI failure after reboot
-
-Full release notes can be found here: https://github.com/tailscale/tailscale/releases/tag/v1.40.0
+  Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
