--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: tailscale
 category: Networking
 name: Tailscale
-version: "v1.34.2"
+version: "v1.40.1"
 tagline: Zero config VPN to access your Umbrel from anywhere
 description: >-
   Tailscale is zero config VPN that creates a secure network between
@@ -28,8 +28,9 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  - Fixed: Handling of a very large number of SplitDNS domains with an exit node
+  This release updates Tailscale from v1.34.2 to v1.40.1.
 
-  - Fixed: Regression handling TS_STATE_DIR in containerboot
+
+  Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/1248
