--- a/robosats/umbrel-app.yml
+++ b/robosats/umbrel-app.yml
@@ -44,7 +44,8 @@ releaseNotes: >-
     
   - New language: japanese
 
-  - Many other minor bug bug fixes and updates.
+  - Many other minor bug fixes and updates.
+  
   
   Full changelog can be found here: https://github.com/Reckless-Satoshi/robosats/compare/v0.4.0-alpha...v0.5.0-alpha
 developer: RoboSats
